--- a/assets/style.css
+++ b/assets/style.css
@@ -13,58 +13,84 @@ body {
 }
 
 /* <!------------Barra Navegación---------------> */
-.navbar {
+.contenedor_navbar {
     display: flex;
-    background-color: #1f2028;
-    justify-content: center;
-    width: 100%;
     height: 65px;
-    padding: 5px;
+    padding: 10px;
     position: fixed;
-    z-index: 99;
+    z-index: 80;
     font-size: 23px;
-    text-transform: uppercase;
+    background-color: #1f2028;
+    width: 100vw;
 }
 
-.nav__logo h2{
-    margin-left: -16rem;
+.navbar1 {
+    display: flex;
+    width: 200px;
+    justify-content: center;
+    margin-left: 10px;
 }
 
-.nav__logo h2:hover {
-    color: aqua;
-}
-
-.nav__logo a {
+.navbar1 a {
     text-decoration: none;
 }
 
+.navbar2 {
+    display: flex;
+    width: 200px;
+    justify-content: center;
+    margin-left: 160px;
+}
+
+audio {
+    width: 260px;
+    border: 3px solid greenyellow;
+    border-radius: 50px;
+    background-color: greenyellow;
+    margin-top: -4px;
+    margin-left: -80px;
+    margin-right: 20px;
+}
+
+.navbar3 {
+    display: flex;
+    justify-content: center;
+    width: 700px;
+    margin-left: 130px;
+    text-transform: uppercase;
+}
+
+.navbar3 li {
+    margin-right: 20px;
+}
+
 .y {
-    color: #fff;
+    color: rgb(255, 72, 0);
+    transition: .5s;
 }
 
 .r {
     color: aqua;
+    transition: .5s;
 }
 
 .m {
     color: greenyellow;
+    transition: .5s;
 }
 
 .y:hover {
     color: aqua;
-    transition: .3s;
     cursor: pointer;
 }
 
 .r:hover {
     color: greenyellow;
-    transition: .3s;
     cursor: pointer;
 }
 
 .m:hover {
-    color: #fff;
-    transition: .3s;
+    color: rgb(255, 72, 0);
     cursor: pointer;
 }
 
@@ -82,6 +108,7 @@ body {
     color: #fff;
     text-decoration: none;
     font-size: 15px;
+    transition: .15s;
 }
 
 .menu .active {
@@ -91,7 +118,6 @@ body {
 .menu a:hover {
     border-color: aqua;
     color: aqua;
-    transition: ease-in .15s;
     border-radius: 5%;
     padding: 8px;
     border-style: ridge;
@@ -130,12 +156,12 @@ body {
 
 .redes .icon-color {
     color: #fff;
+    transition: .15s;
 }
 
 .redes .icon-color:hover {
     color: greenyellow;
     font-size: 35px;
-    transition: .15s;
 }
 
 /* <!------------Sobre mi-----------------------> */
@@ -153,12 +179,12 @@ body {
 }
 
 .column_sobre_mi-texto {
-    background-color: #fff;
-    margin-left: 50px;
+    margin: 50px;
+    margin-top: 100px;
     font-size: 15px;
-    padding-right: 100px;
-    margin-top: 10em;
-    width: 60wv;
+    padding: 50px;
+    width: 920px;
+    height: 530px;
 }
 
 .column_sobre_mi-texto p {
@@ -170,22 +196,17 @@ body {
 }
 
 .column_sobre_mi-img {
-    float: left;
-    width: 40vw;
-    background-color: #fff;
+    height: 560px;
+    margin-top: 85px;
 }
 
 .column_sobre_mi-img img {
     width: 210px;
     border-radius: 15px;
-    margin-top: 3px;
-    margin-right: 100px;
     box-shadow: 10px 10px 50px 15px #1f2028;
 }
 
 .descargar__cv button{
-    margin-top: 5em;
-    margin-left: 18em;
     padding: 10px 20px;
     background-color: #1f2028;
     color: #fff;
@@ -195,6 +216,9 @@ body {
     text-transform: uppercase;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold ;
+    margin-top: 90px;
+    margin-left: 280px;
+    transition: .3S;
 }
 
 .descargar__cv button:hover {
@@ -202,7 +226,6 @@ body {
     color: #1f2028;
     border-width: 4px;
     box-shadow: 5px 5px #1f2028;
-    transition: .3S;
 }
 
 .descarga-icon {
@@ -226,14 +249,12 @@ body {
 .column_estudios1 {
     float: left;
     width: 50%;
-    background-color:#1f2028;
 }
 
 .column_estudios2 {
     float: left;
     width: 50%;
     height: 80vh;
-    background-color: #1f2028;
 }
 
 /* timeline */
@@ -241,45 +262,45 @@ body {
 .estudios .timeline-area {
     margin: 85px -14em;
     width: 360px;
-    border-left: 5px solid aqua;
+    border-left: 5px solid rgb(255, 72, 0);
     padding: 0 20px 0 30px;
 }
 
-.estudios .timeline-area .tarjetas_estudios {
+.estudios .tarjetas_estudios {
     background-color: #fff;
     padding: 3px 25px;
     font-size: 13px;
-    border: 1px solid aqua;
+    border: 1px solid rgb(255, 72, 0);
     line-height: 1.7;
     position: relative;
     height: 115px;
     width: 565px;
     margin-bottom: 20px;
     border-radius: 15px;
+    transition: .2s;
 }
 
-.estudios .timeline-area .tarjetas_estudios:hover {
+.estudios .tarjetas_estudios:hover {
     transform: scale(1.1);
-    transition: .4s;
-    box-shadow: 20px 20px 20px #1f2028;
-    z-index: 98;
+    box-shadow: 20px 20px 20px 20px #1f2028;
     cursor: pointer;
+    z-index: 1;
 }
 
-.estudios .timeline-area .tarjetas_estudios:before {
+.estudios .tarjetas_estudios:before {
     content: '';
     display: block;
     width: 25px;
     height: 25px;
     border-radius: 50%;
     background-color: #1f2028;
-    border: 3px solid aqua;
+    border: 3px solid rgb(255, 72, 0);
     position: absolute;
     top: 10px;
     left: -49px;
 }
 
-.estudios .timeline-area .tarjetas_estudios:after {
+.estudios .tarjetas_estudios:after {
     content: '';
     width: 0;
     height: 0;
@@ -291,18 +312,18 @@ body {
     left: -22px;
 }
 
-.estudios .timeline-area .tarjetas_estudios h2 {
+.estudios .tarjetas_estudios h2 {
     margin: 0;
     text-transform: uppercase;
     font-size: 25px;
 }
 
-.estudios .timeline-area .tarjetas_estudios h3 {
+.estudios .tarjetas_estudios h3 {
     margin: 0;
     font-size: 20px;
 }
 
-.estudios .timeline-area .tarjetas_estudios h4{
+.estudios .tarjetas_estudios h4{
     margin: 0;
     font-size: 20px;
     font-family:'Courier New', Courier, monospace ;
@@ -318,15 +339,10 @@ body {
     margin-bottom: -40px;
     margin-top: 17px;
     border-radius: 50%;
-
-	-webkit-transform: scale(1);
-	transform: scale(1);
-	-webkit-transition: .1s ease-in-out;
-	transition: .1s ease-in-out;    
+	transition: .2s;    
 }
 
 .estudios .imagen-educacion img:hover {
-	-webkit-transform: scale(1.3);
 	transform: scale(1.3);
 }
 
@@ -362,45 +378,45 @@ body {
 .laburo .timeline-area {
     margin: 85px 10em;
     width: 750px;
-    border-right: 5px solid aqua;
+    border-right: 5px solid rgb(255, 72, 0);
     padding: 0 20px 0 0;
 }
 
-.laburo .timeline-area .tarjetas_laburo {
+.laburo .tarjetas_laburo {
     background-color: #fff;
     padding: 3px 15px;
     font-size: 13px;
-    border: 1px solid aqua;
+    border: 1px solid rgb(255, 72, 0);
     line-height: 1.7;
     position: relative;
     height: 193px;
     width: 700px;
     margin-bottom: 5px;
     border-radius: 15px;
+    transition: .2s;
 }
 
-.laburo .timeline-area .tarjetas_laburo:hover {
+.laburo .tarjetas_laburo:hover {
     transform: scale(1.1);
-    transition: .3s;
-    z-index: 98;
-    box-shadow: 20px 20px 20px #1f2028;
+    box-shadow: 20px 20px 20px 20px #1f2028;
     cursor: pointer;
+    z-index: 1;
 }
 
-.laburo .timeline-area .tarjetas_laburo:before {
+.laburo .tarjetas_laburo:before {
     content: '';
     display: block;
     width: 25px;
     height: 25px;
     border-radius: 50%;
     background-color: #1f2028;
-    border: 3px solid aqua;
+    border: 3px solid rgb(255, 72, 0);
     position: absolute;
     top: 10px;
     left: 729px;
 }
 
-.laburo .timeline-area .tarjetas_laburo:after {
+.laburo .tarjetas_laburo:after {
     content: '';
     width: 0;
     height: 0;
@@ -459,16 +475,11 @@ body {
     margin-bottom: -40px;
     margin-top: 80px;
     border-radius: 50%;
-
-	-webkit-transform: scale(1);
-	transform: scale(1);
-	-webkit-transition: .1s ease-in-out;
-	transition: .1s ease-in-out;    
+	transition: .2s;    
 }
 
 .laburo .imagen-laburo img:hover {
-	-webkit-transform: scale(1.3);
-	transform: scale(2.3);
+	transform: scale(1.5);
 }
 
 /* <!------------Competencias-------------------> */
@@ -491,6 +502,7 @@ body {
     border-radius: 20px;
     padding: 20px 20px 0 20px;
     border: 1px solid #1f2028;
+    transition: .3s;
 }
 
 .column_competencias .li_tec {
@@ -503,10 +515,9 @@ body {
 
 .column_competencias:hover {
     transform: scale(1.05);
-    transition: .3s;
     cursor: pointer;
     box-shadow: 10px 10px 20px rgb(15, 85, 85);
-    border: 5px aqua;
+    border: 1px solid aqua;
 }
 
 .column_competencias h3 {
@@ -558,11 +569,14 @@ body {
     margin-bottom: 15px;
 }
 
+.animacion_tarjeta {
+    transition: .3s;
+}
+
 .animacion_tarjeta:hover {
     background-color: #fff;
     border-radius: 10px;
     transform: scale(1.13);
-    transition: .3s;
     box-shadow: 5px 5px 10px #1f2028;
 }
 
@@ -570,11 +584,14 @@ body {
     list-style: none;
     display: flex;
     margin-top: 50px;
+	transition: .3s;
+}
 
-    -webkit-transform: scale(1);
-	transform: scale(1);
-	-webkit-transition: .1s ease-in-out;
-	transition: .1s ease-in-out;
+.li_pasa:hover {
+	transform: scale(1.2);
+    box-shadow: 5px 5px 10px #1f2028;
+    background-color: #fff;
+    border-radius: 20px;
 }
 
 .li_pasa img {
@@ -584,15 +601,7 @@ body {
     margin-right: 15px;
 }
 
-.li_pasa:hover {
-	-webkit-transform: scale(1.3);
-	transform: scale(1.2);
-    box-shadow: 5px 5px 10px #1f2028;
-    background-color: #fff;
-    border-radius: 20px;
-}
-
-.cosa {
+.ante_titulo {
     font-size: 10px;
     margin: -6px;
     text-align: center;
@@ -645,7 +654,7 @@ body {
     position: absolute;
     width: 100%;;
     height: 100%;
-    border: 2px solid aqua;
+    border: 2px solid greenyellow;
     border-radius: 10px;
 }
 
@@ -688,7 +697,7 @@ body {
 .enlaces__proyectos a:hover {
     -webkit-transform: scale(1.2);
     transform: scale(1.2);
-    color: aqua;
+    color: greenyellow;
 }
 
 .column__slide-descrip {
@@ -766,7 +775,7 @@ body {
 	display: inline-block;
 	background-color: #fff;
 	transition: .1s;
-    border: 2px solid aqua;
+    border: 2px solid greenyellow;
 }
 
 #nav_slide .dots:hover {
@@ -824,16 +833,12 @@ body {
 }
 
 .container__contacto a {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    -webkit-transition: .1s ease-in-out;
-    transition: .1s ease-in-out;
+    transition: .2s;
     margin: 50px;
     font-size: 60px;
 }
 
 .container__contacto a:hover {
-    -webkit-transform: scale(1.3);
     transform: scale(1.3);
 }
 
