--- a/assets/style.css
+++ b/assets/style.css
@@ -224,7 +224,6 @@ audio {
 .descargar__cv button:hover {
     background-color: aqua;
     color: #1f2028;
-    border-width: 4px;
     box-shadow: 5px 5px #1f2028;
 }
 
@@ -493,11 +492,11 @@ audio {
 
 .column_competencias {
     justify-content: center;
-    width: 410px;
+    width: 418px;
     height: 560px;
     background-color: #fff;
     margin-top: 23px;
-    margin-right: 25px;
+    margin-right: 15px;
     float: left;
     border-radius: 20px;
     padding: 20px 20px 0 20px;
@@ -511,6 +510,7 @@ audio {
     color: #fff;
     margin-top: 2px;
     text-align: center;
+    list-style: none;
 }
 
 .column_competencias:hover {
